# wstf

./: .gitignore  Cargo.toml  LICENSE  README.md  renovate.json
.github/workflows/: analyse.yml  analyze.yml
internal/mocks/: tmp.wstf
internal/tools/: bench.rs  client.rs  concat.rs  split.rs
src/: lib.rs  update.rs  utils.rs
src/algorithms/: events.rs  histogram.rs  levels.rs  mod.rs  orderbook.rs
src/parser/: ffi.rs  filetype.rs  mod.rs  utils.rs  wstf_file_metadata.rs
src/protocol/: file_format.rs  mod.rs
src/storage/: circular_queue.rs  cxn.rs  insert_command.rs  mod.rs  pool.rs
tools/client/: Cargo.toml
tools/client/src/: main.rs
tools/concat/: Cargo.toml
tools/concat/src/: main.rs
tools/split/: Cargo.toml
tools/split/src/: main.rs
