[package]
name = "wstf"
version = "2.0.0"
authors = ["alxshelepenok <alxshelepenok@gmail.com>"]
repository = "https://github.com/wtrscape/wstf"
description = "Rust implementation of the WSTF (Waterscape Tick Format) protocol"
license = "MIT"
edition = "2018"

[lib]
name = "wstf"
path = "src/lib.rs"

[[bin]]
name = "wstf-client"
path = "internal/tools/client.rs"

[[bin]]
name = "wstf-concat"
path = "internal/tools/concat.rs"

[[bin]]
name = "wstf-split"
path = "internal/tools/split.rs"

[dependencies]
clap = "2.34.0"
chrono = "0.4.24"
byteorder = "1.4.3"
arrayvec = "0.7.2"
bitflags = "1.3.2"
serde = "1.0.160"
lazy_static = "1.4.0"
serde_derive = "1.0.160"
serde_json = "1.0.96"
indexmap = "1.9.3"
libc = "0.2.142"
log = "0.4.17"
csv = "1.2.1"
alloc_counter = { version = "0.0.4", optional = true }

[dependencies.uuid]
features = ["serde", "v4"]
version = "1.3.1"

[dev-dependencies]
serial_test = "2.0.0"

[features]
default = []
count_alloc = ["alloc_counter"]
