[package]
name = "wstf"
version = "2.0.0"
authors = ["alxshelepenok <alxshelepenok@gmail.com>"]
repository = "https://github.com/wtrscape/wstf"
description = "Rust implementation of the WSTF (Waterscape Tick Format) protocol"
license = "MIT"
edition = "2018"

[lib]
name = "wstf"
path = "src/lib.rs"

[[bin]]
name = "wstf-client"
path = "internal/tools/client.rs"

[[bin]]
name = "wstf-concat"
path = "internal/tools/concat.rs"

[[bin]]
name = "wstf-split"
path = "internal/tools/split.rs"

[dependencies]
clap = "2.34.0"
chrono = "0.4.26"
byteorder = "1.4.3"
arrayvec = "0.7.4"
bitflags = "1.3.2"
serde = "1.0.174"
lazy_static = "1.4.0"
serde_derive = "1.0.171"
serde_json = "1.0.103"
indexmap = "1.9.3"
libc = "0.2.147"
log = "0.4.19"
csv = "1.2.2"
alloc_counter = { version = "0.0.4", optional = true }

[dependencies.uuid]
features = ["serde", "v4"]
version = "1.3.4"

[dev-dependencies]
serial_test = "2.0.0"

[features]
default = []
count_alloc = ["alloc_counter"]
