[package]
name = "wstf"
version = "2.0.0"
authors = ["alxshelepenok <alxshelepenok@gmail.com>"]
repository = "https://github.com/wtrscape/wstf"
description = "Rust implementation of the WSTF (Waterscape Tick Format) protocol."
license = "MIT"
edition = "2018"

[lib]
name = "wstf"
path = "src/lib.rs"

[[bin]]
name = "wstf-client"
path = "internal/tools/client.rs"

[[bin]]
name = "wstf-concat"
path = "internal/tools/concat.rs"

[[bin]]
name = "wstf-split"
path = "internal/tools/split.rs"

[dependencies]
clap = "2.34.0"
chrono = "0.4.31"
byteorder = "1.4.3"
arrayvec = "0.7.4"
bitflags = "2.4.2"
serde = "1.0.195"
lazy_static = "1.4.0"
serde_derive = "1.0.195"
serde_json = "1.0.111"
indexmap = "2.1.0"
libc = "0.2.152"
log = "0.4.20"
csv = "1.3.0"
alloc_counter = { version = "0.0.4", optional = true }

[dependencies.uuid]
features = ["serde", "v4"]
version = "1.6.1"

[dev-dependencies]
serial_test = "2.0.0"

[features]
default = []
count_alloc = ["alloc_counter"]
