[package]
name = "split"
version = "0.1.0"
authors = ["alxshelepenok <alxshelepenok@gmail.com>"]
repository = "https://github.com/wtrscape/wstf"
description = "A tiny library for splits big WSTF files into smaller ones"
edition = "2018"

[dependencies]
clap = "2.33.0"
wstf_protocol = { path = "../../packages/wstf_protocol", version = "0.1.0" }
